limit bug fixed
